Config.ini file modified to include more tables

--- a/config.ini
+++ b/config.ini
@@ -1,7 +1,9 @@
 [ReportFields]
 #Report table names
 #Format: [db_table_name]=[user-friendly-name]
-farmer:Farmer
+#farmer:Farmer
+party:Person
+spatial_unit:Spatial unit
 
 [ReportMessages]
 Footer:GLTN - Securing land and property rights for all
