Save holders data in scheme lodgement

--- a/templates/holders_config.ini
+++ b/templates/holders_config.ini
@@ -1,4 +1,9 @@
 [ColumnMapping]
 # source column name: target column name (in DB)
-First_:first_name
-Genderee: gender
+Surname: surname
+First_Name: first_name
+Gender: gender
+Holder_ID_Number: holder_identifier
+#Income_Level: income_level
+#Marital_Status: marital_status
+Holder_Occupation: occupation
