Update holders column mapping config file

--- a/templates/holders_config.ini
+++ b/templates/holders_config.ini
@@ -2,8 +2,18 @@
 # source column name: target column name (in DB)
 Surname: surname
 First_Name: first_name
-Gender: gender
+Holder_Gender: gender
 Holder_ID_Number: holder_identifier
-#Income_Level: income_level
-#Marital_Status: marital_status
+Holder_DoB: date_of_birth
+Marital_Status: marital_status
+Disability_Status: disability_status
+Income_Level: income_level
 Holder_Occupation: occupation
+Spouse_Surname: spouse_surname
+Spouse_First_Name: spouse_first_name
+Spouse_Gender: spouse_gender
+Spouse_ID_Number: spouse_identifier
+Spouse_DoB: spouse_date_of_birth
+Other_Dependants: other_dependants
+Name_Juristic_Person: name_of_juristic_person
+Registration_Number: reg_no_of_juristic_person
