--- a/.github/workflows/test_plugin.yaml
+++ b/.github/workflows/test_plugin.yaml
@@ -5,7 +5,11 @@ on:
     paths:
     - "stdm/**"
     - ".github/workflows/test_plugin.yaml"
-
+  pull_request:
+    paths:
+    - "stdm/**"
+    - ".github/workflows/test_plugin.yaml"
+      
 env:
   # plugin name/directory where the code for the plugin is stored
   PLUGIN_NAME: stdm
