Configuration Wizard: Retain column width and remove security module
Now the column editor maintains proper width for columns in the
column table view even when you switch to a different entity.

This patch also disabled the security module. This module is going
a complete re-write, it will be available as soon as it is done and
tested.

--- a/.gitignore
+++ b/.gitignore
@@ -6,11 +6,19 @@
 #PyCharm files
 .idea
 
+#Vim backup files
+*~
+.*~
+
+#VS Code files
+.vscode
+
 #Compiled Python Files
 *.pyc
 *.zip
 
 docs/_build
+third_party/
 
 # Bash scripts
 *.sh
